--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,16 +27,14 @@
             </div>
             <div class="form-group">
               <label for="password">パスワード</label>
-        <!--          <input id="pwd" type="password" name="pwd" minlength="4" required tabindex="2" pattern="[a-zA-Z0-9]+" class="form-control validate-target" />-->
               <input id="password" type="password" name="password" minlength="4" required tabindex="2" pattern="[a-zA-Z0-9]+" class="form-control validate-target"/>
               <div class="invalid-feedback"></div>
             </div>
             <div class="d-flex align-items-center justify-content-between">
               <div>
-                <a href="">アカウント登録</a>
+                <a href="/register">アカウント登録</a>
               </div>
               <div>
-        <!--            <input type="submit" value="ログイン" class="btn btn-primary shadow-sm">-->
                 <input type="submit" value="ログイン" class="btn btn-primary shadow-sm"/>
               </div>
             </div>
