tabindex修正、賛成反対表示修正

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">パスワード</label>
-                    <input id="password" type="password" name="password" minlength="4" required tabindex="2" pattern="[a-zA-Z0-9]+" class="form-control validate-target" />
+                    <input id="password" type="password" name="password" minlength="4" required pattern="[a-zA-Z0-9]+" class="form-control validate-target" />
                     <div class="invalid-feedback"></div>
                 </div>
                 <div class="form-group">
