--- a/src/main/resources/templates/topic/detail.html
+++ b/src/main/resources/templates/topic/detail.html
@@ -11,6 +11,7 @@
     <title>Detail</title>
 </head>
 <body>
+    <div th:replace="partials/msg :: msg"></div>
     <div id="container">
     <div th:replace="partials/header :: header"></div>
     <main class="container py-3">
