--- a/src/main/resources/templates/topic/detail.html
+++ b/src/main/resources/templates/topic/detail.html
@@ -26,7 +26,7 @@
                         </h2>
                         <span>
                             Commented by
-                            <span th:text="${comment.body}"></span>
+                            <span th:text="${comment.nickname}"></span>
                         </span>
                     </li>
                 </div>
