--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,6 +11,7 @@
   <title>Home</title>
 </head>
 <body>
+  <div th:replace="partials/msg :: msg"></div>
   <div id="container">
     <div th:replace="partials/header :: header"></div>
     <main class="container py-3">
