--- a/src/main/resources/templates/topic/edit.html
+++ b/src/main/resources/templates/topic/edit.html
@@ -11,42 +11,43 @@
     <title>Edit</title>
 </head>
 <body>
-<div id="container">
-    <div th:replace="partials/header :: header"></div>
-    <main class="container py-3">
-        <h1 class="h2 mb-3" th:text="${isEdit}? 'トピックの編集' : 'トピック作成'"></h1>
+    <div th:replace="partials/msg :: msg"></div>
+    <div id="container">
+        <div th:replace="partials/header :: header"></div>
+        <main class="container py-3">
+            <h1 class="h2 mb-3" th:text="${isEdit}? 'トピックの編集' : 'トピック作成'"></h1>
 
-        <div class="bg-white p-4 shadow-sm mx-auto rounded">
-            <form class="validate-form" th:action="${isEdit} ? @{/topic/edit} : @{/topic/create}" method="POST" novalidate autocomplete="off">
-                <input type="hidden" name="topic_id" th:value="${topic.id}">
-                <div class="form-group">
-                    <label for="title">タイトル</label>
-                    <input type="text" id="title" name="title" th:value="${topic.title}" class="form-control validate-target" required maxlength="30" autofocus>
-                    <div class="invalid-feedback"></div>
-                </div>
-                <div class="form-group">
-                    <label for="published">ステータス</label>
-                    <select name="published" id="published" class="form-control">
-                        <option value="1" th:selected="${topic.published == 1}">公開</option>
-                        <option value="0" th:selected="${topic.published == 0}">非公開</option>
-                    </select>
-                </div>
-                <div class="d-flex align-items-center">
-                    <div>
-                        <input type="submit" value="送信" class="btn btn-primary shadow-sm mr-3">
+            <div class="bg-white p-4 shadow-sm mx-auto rounded">
+                <form class="validate-form" th:action="${isEdit} ? @{/topic/edit} : @{/topic/create}" method="POST" novalidate autocomplete="off">
+                    <input type="hidden" name="topic_id" th:value="${topic.id}">
+                    <div class="form-group">
+                        <label for="title">タイトル</label>
+                        <input type="text" id="title" name="title" th:value="${topic.title}" class="form-control validate-target" required maxlength="30" autofocus>
+                        <div class="invalid-feedback"></div>
                     </div>
-                    <div>
-                        <a th:href="@{/topic/archive}">戻る</a>
+                    <div class="form-group">
+                        <label for="published">ステータス</label>
+                        <select name="published" id="published" class="form-control">
+                            <option value="1" th:selected="${topic.published == 1}">公開</option>
+                            <option value="0" th:selected="${topic.published == 0}">非公開</option>
+                        </select>
                     </div>
+                    <div class="d-flex align-items-center">
+                        <div>
+                            <input type="submit" value="送信" class="btn btn-primary shadow-sm mr-3">
+                        </div>
+                        <div>
+                            <a th:href="@{/topic/archive}">戻る</a>
+                        </div>
 
-                </div>
-            </form>
-        </div>
-    </main>
-    <div th:replace="partials/footer :: footer"></div>
-</div>
-<script th:src="@{/js/vendor/chart.js}"></script>
-<script th:src="@{/js/pie-chart.js}"></script>
-<script th:src="@{/js/form-validate.js}"></script>
+                    </div>
+                </form>
+            </div>
+        </main>
+        <div th:replace="partials/footer :: footer"></div>
+    </div>
+    <script th:src="@{/js/vendor/chart.js}"></script>
+    <script th:src="@{/js/pie-chart.js}"></script>
+    <script th:src="@{/js/form-validate.js}"></script>
 </body>
 </html>
